added images, small changes to html, filled out css

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,59 @@
 body {
-    background-color: maroon;
+    background-image: url("../images/bckrnd.jpeg");
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-color: rgb(0, 0, 0);
+    color: white;
+    font-family:Tahoma;
+    text-align: center;
+    cursor: crosshair;
+}
+
+img:hover {
+    cursor: help;
+    border-left: rgb(222, 144, 224) dashed 5px;
+    border-right: rgb(114, 222, 230) dashed 5px;
+    border-radius: 5px;
+}
+
+h1, h2, h3 {
+    background-image: radial-gradient(rgba(0, 0, 0, .5), rgba(0, 0, 0, 0.1));
+}
+
+hr {
+    height: 8px;
+    background-image: linear-gradient(to right, black, rgb(114, 105, 105));
+    border:none;
+}
+
+p span {
+    background: rgba(173, 172, 172, 0.3);
+}
+
+a {
+    font-family: 'Courier New';
+    font-size: 2em;
+}
+
+a:link {
+    color:rgb(124, 6, 6);
+}
+
+a:visited {
+    color:rgb(114, 105, 105);
+}
+
+a:hover {
+    color:white;
+}
+
+.button {
+    display:inline;
+    margin: .5em;
+    padding: 1em 2em;
+    border-style: solid;
+    border-color: black;
+    border-radius: 2em;
+    border-width: .5em;
+    background-image: radial-gradient(rgba(255, 255, 255, 1), rgba(185, 140, 97, 0.7));
 }
